tests/snapshots/tui_snapshots__session_window.snap
---
source: tests/tui_snapshots.rs
expression: output
---
┌ Agent sessions ──────────────────────────────────────────────────────────────┐
│○ Spec: Snapshot Spec                                                         │
│  ◐ 1 › Root planning                                                         │
│    ○ 1.1 › Child task                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Live UI: Spec: Snapshot Spec ────────────────────────────────────────────────┐
│⌨ focus is shared with selected agent                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
