tests/snapshots/tui_snapshots__spec_pane_all_completed.snap
---
source: tests/tui_snapshots.rs
expression: output
---
╭ Spec Sheet (S to close) ───────────────────────╮
│📋  All Completed Spec                           │
│  ● 0: Completed task 1                         │
│  ● 1: Completed task 2                         │
│  ● 2: Completed task 3                         │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
