tests/snapshots/tui_snapshots__spec_pane_empty.snap
---
source: tests/tui_snapshots.rs
expression: output
---
╭ Spec Sheet (S to close) ───────────────────────╮
│📋  Test Specification: Feature Implementati     │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
