tests/snapshots/tui_snapshots__spec_pane_history.snap
---
source: tests/tui_snapshots.rs
expression: output
---
╭ Spec metadata ─────────────────────────────────────────────────────────────────────────╮
│📋  Snapshot Spec                                                                        │
│Created by tests • 1970-01-01 00:00                                                     │
│Controls: P Pause · R Rerun · A Abort · H History · Enter Drawer                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭ Steps ─────────────────────────────────────────────────────────────────────────────────╮
│#    State  Title                           Details                                     │
│1    ●      Step 1: Feature                 Criteria 1 | —                              │
│2    ◐      Step 2: Feature                 Criteria 2 | ↳ 1                            │
│3    ○      Step 3: Feature                 Criteria 3 | ↳ 2                            │
│                                                                                        │
╰────────────────────────────────────────────────────────────────────────────────────────╯
╭ Spec history (H to toggle) ────────────────────────────────────────────────────────────╮
│✓ Step 1 · Completed step 1                                                             │
│Tests: test-step-1(Pass)                                                                │
│Artifacts: file1.rs                                                                     │
│✓ Step 2 · Completed step 2                                                             │
│Tests: test-step-2(Pass)                                                                │
│Artifacts: file2.rs                                                                     │
╰────────────────────────────────────────────────────────────────────────────────────────╯
