tests/snapshots/tui_snapshots__spec_pane_selected_last.snap
---
source: tests/tui_snapshots.rs
expression: output
---
╭ Spec Sheet (S to close) ───────────────────────╮
│📋  Test Specification: Feature Implementati     │
│  ● 0: Step 1: Implementation task              │
│  ◐ 1: Step 2: Implementation task              │
│  ○ 2: Step 3: Implementation task              │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
