tests/snapshots/tui_snapshots__spec_pane_with_steps.snap
---
source: tests/tui_snapshots.rs
expression: output
---
╭ Spec Sheet (S to close) ─────────────────────────────────╮
│📋  Test Specification: Feature Implementation             │
│  ● 0: Step 1: Implementation task                        │
│  ◐ 1: Step 2: Implementation task                        │
│  ○ 2: Step 3: Implementation task                        │
│  ○ 3: Step 4: Implementation task                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
╰──────────────────────────────────────────────────────────╯
